--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	        <hr>
 	        <p>HELLO</p>
         
-<a href="file:///I:/jdyuhen/jashr.html">this is my site...
+<a href="jashr.html">this is my site...
 
              
         <h2>   His early life......</h2>
