--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <h3> write any comments or feedbacks....on this site... </h3>
 <p> bla bla bla.com </p>
-<h4> this site has been made by jash and vatsal!.enjoy reading and wait for the next topic... who hooooo.</h4>
+<h4> this site has been made by jash .enjoy reading and wait for the next topic... who hooooo.</h4>
 
 </div>
 </body>
